# mukti

./: .releases.json  Cargo.toml  README.md  _redirects  releases.json
.github/workflows/: ci.yml  release.yml
fixtures/: mukti-releases.json
mukti-bin/: Cargo.toml
mukti-bin/src/: checksums.rs  command.rs  errors.rs  lib.rs  main.rs  netlify_toml.rs  redirects.rs  release_json.rs
mukti-metadata/: CHANGELOG.md  Cargo.toml
mukti-metadata/src/: errors.rs  models.rs
scripts/: cargo-release-publish.sh
