[package]
name = "mukti-bin"
description = "Command to update release metadata"
version = "0.6.2"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
atomicwrites = "0.4.3"
camino = "1.1.6"
clap = { version = "3.2.25", features = ["derive"] }
color-eyre = { version = "0.6.2", default-features = false }
serde_json = "1.0.113"
semver = "1.0.21"
mukti-metadata = { path = "../mukti-metadata" }
