[package]
name = "mukti-bin"
description = "Command to update release metadata"
version = "0.7.4"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
atomicwrites = "0.4.3"
camino = "1.1.9"
clap = { version = "3.2.25", features = ["derive"] }
color-eyre = { version = "0.6.3", default-features = false }
serde_json = "1.0.128"
semver = "1.0.23"
mukti-metadata = { path = "../mukti-metadata" }
