[package]
name = "mukti-bin"
description = "Command to update release metadata"
version = "0.7.9"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
atomicwrites = "0.4.4"
blake2 = "0.10.6"
bytes = "1.10.1"
camino = "1.1.11"
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = { version = "0.6.5", default-features = false }
futures-util = "0.3.31"
hex = "0.4.3"
mukti-metadata = { path = "../mukti-metadata" }
reqwest = { version = "0.12", default-features = false, features = ["http2", "macos-system-configuration", "rustls-tls"] }
semver = "1.0.26"
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
